// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexItem renders default 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

<div
  className="emotion-0"
  data-cy="flexItem"
>
  content
</div>
`;

exports[`FlexItem renders with all props 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

<div
  className="emotion-0"
  data-cy="flexItem"
>
  content
</div>
`;

exports[`FlexItem renders with responsive props 1`] = `
@media (min-width:0) {
  .emotion-0 {
    box-sizing: border-box;
    -webkit-flex-basis: auto;
    -ms-flex-preferred-size: auto;
    flex-basis: auto;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    width: initial;
  }
}

@media (min-width:900px) {
  .emotion-0 {
    box-sizing: border-box;
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    min-width: 0;
    width: auto;
  }
}

@media (min-width:0) {
  .emotion-0 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

@media (min-width:900px) {
  .emotion-0 {
    -webkit-box-flex: 2;
    -webkit-flex-grow: 2;
    -ms-flex-positive: 2;
    flex-grow: 2;
  }
}

@media (min-width:0) {
  .emotion-0 {
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
  }
}

@media (min-width:900px) {
  .emotion-0 {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

<div
  className="emotion-0"
  data-cy="flexItem"
>
  content
</div>
`;
